2185 [OneClick] fixed a crash when using external audio files. Bug #3574820
2184 portable AviSynth will be used if AviSynth is not installed
2183 [File Indexer] added selectable FFMS index file location
                    added PGC handling
2182 [x264] increased the maximum value for --vbv-maxrate and --vbv-bufsize. Bug #3573545
2181 [DGIndexNV] enhanced progress information (requires dgindexnv 2043+)
2174 [OneClick] fixed included subtitle handling if input container is not MKV/VOB
2172 [OneClick] support multiple input files per drag & drop
2171 [OneClick] cosmetics #2
2170 [OneClick] cosmetics
2169 [FFMPEG] some adjustments for newer builds
2164 [OneClick] added option to select different default audio settings for different languages
2163 [OneClick] fixed muxing of external subtitle files
2162 [OneClick] added up/down buttons for the indexer priority selection
2161 [OneClick] added option for the default output directory
2160 [OneClick] added option to disable audio/video tracks completely by default
2159 [OneClick] use the correct input file if using Blu-ray input with the option "don't encode video"
2158 [HD Streams Extractor] fixed a crash
2157 [OneClick] added an improved OneClick encoder with these changes:
     - added subtitle control (including delay, language, name, forced/default flag). Feature request #2752988
     - enhanced audio control (added delay, language, name)
     - AVS files as video input supported. Feature request #3412229
     - folder as input supported. Feature request #3429875/#2773587
     - embedded VOB subtitle support (IFO must be available)
     - every OneClick job will be stored in a unique working directory. Feature request #2798486
     - added option to select default audio/subtitle languages
     - added option to select default working directory
     - added option to specify the indexer priority
     - added option to define the project name settings